--- a/index.html
+++ b/index.html
@@ -7,18 +7,114 @@
     <title>Pet Food</title>
     <!-- ! favicon -->
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
-    <!-- !  -->
+    <!-- ! fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/0bea94eb1a.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- ! bootstrap css -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-
     <!-- ! stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <!-- ! HEADER SECTION START -->
+    <header>
+      <!-- ! navber -->
+      <div id="navber" class="navber position-fixed w-100 bg-white">
+        <nav class="navbar navbar-expand-lg py-1">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <h1 class="display-6 text-dark">Pet Food</h1>
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-dark fw-bold"
+                    aria-current="page"
+                    href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark fw-bold" href="#"> Shop</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark fw-bold" href="#">
+                    Collections</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark fw-bold" href="#"> Blogs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark fw-bold" href="#"> Contact</a>
+                </li>
+              </ul>
+              <div>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link text-dark fw-bold"
+                      ><i class="fa-solid fa-magnifying-glass"></i
+                    ></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled text-darkfw-bold"
+                      ><i class="fa-regular fa-user"></i
+                    ></a>
+                  </li>
+                  <li class="nav-item">
+                    <button
+                      type="button"
+                      class="btn position-relative text-dark fw-bold"
+                    >
+                      <i class="fa-solid fa-bag-shopping"></i>
+                      <span
+                        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark"
+                      >
+                        0
+                        <span class="visually-hidden">unread messages</span>
+                      </span>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!-- ! banner -->
+      <div class="banner vw-100 vh-100">
+        <div class="container d-flex align-items-center h-100">
+          <div class="text-white text-center">
+            <h1 class="display-1">
+              High Quality <br />
+              Pet Food
+            </h1>
+            <p>Sale up to 40% off today</p>
+            <button class="btn btn-dark fw-bold">Shop Now</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- ! HEADER SECTION END -->
     <!-- ! bootstrap bundle js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
