--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         </nav>
       </div>
       <!-- ! banner -->
-      <div class="banner vw-100 vh-100">
+      <div class="banner">
         <div class="container d-flex align-items-center h-100">
-          <div class="text-white text-center">
-            <h1 class="display-1">
+          <div class="text-white text-center mt-5">
+            <h1 class="display-1 mt-5">
               High Quality <br />
               Pet Food
             </h1>
@@ -115,6 +115,135 @@
       </div>
     </header>
     <!-- ! HEADER SECTION END -->
+    <!-- ! MAIN SECTION START -->
+    <main>
+      <!-- ! Top categories -->
+      <section class="my-5">
+        <div class="container">
+          <h2 class="text-center fw-bold">Top categories</h2>
+          <div class="row row-cols-1 row-cols-md-5 g-4 mt-3">
+            <div class="col">
+              <div class="card h-100 border-0 text-center">
+                <img
+                  src="images/category-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text fw-bold">Cat Food</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 text-center">
+                <img
+                  src="images/category-2.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text fw-bold">Cat Toys</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 text-center">
+                <img
+                  src="images/category-3.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text fw-bold">Dog Food</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 text-center">
+                <img
+                  src="images/category-4.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text fw-bold">Dog Toys</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 border-0 text-center">
+                <img
+                  src="images/category-5.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text fw-bold">Dog Sumpplements</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+            <div class="col">
+              <div class="card border-0">
+                <img
+                  src="images/offer-banner-1.jpg"
+                  class="card-img"
+                  alt="..."
+                />
+                <div class="card-img-overlay d-flex align-items-center">
+                  <div>
+                    <h4 class="card-title fw-bold">
+                      Hot Summer <br />
+                      Deals
+                    </h4>
+                    <button class="btn btn-dark">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border-0">
+                <img
+                  src="images/offer-banner-2.jpg"
+                  class="card-img"
+                  alt="..."
+                />
+                <div class="card-img-overlay d-flex align-items-center">
+                  <div>
+                    <h4 class="card-title fw-bold">
+                      Spoil your <br />
+                      true love
+                    </h4>
+                    <button class="btn btn-dark">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border-0">
+                <img
+                  src="images/offer-banner-3.jpg"
+                  class="card-img"
+                  alt="..."
+                />
+                <div class="card-img-overlay d-flex align-items-center">
+                  <div>
+                    <h4 class="card-title fw-bold">
+                      New in this <br />
+                      year
+                    </h4>
+                    <button class="btn btn-dark">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- ! MAIN SECTION END -->
     <!-- ! bootstrap bundle js -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
